<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forecastLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:gravity="left|right"
    android:padding="8dp" >

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dayFormat"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageView
        android:id="@+id/forecastImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/day"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:id="@+id/conditionString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/forecastImage"
        android:layout_below="@+id/forecastImage"
        android:layout_gravity="left"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/morningPrecip"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/morningPrecipFormat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eveningPrecip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/morningPrecip"
        android:layout_below="@+id/morningPrecip"
        android:layout_marginTop="7dp"
        android:layout_alignParentRight="true"
        android:text="@string/eveningPrecipFormat"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/high"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/high"
        android:layout_alignLeft="@+id/high"
        android:layout_marginTop="7dp"
        android:text="@string/low"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

</RelativeLayout>