<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nook_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
	<RelativeLayout
	    android:id="@+id/currentConditionLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
        
	    <TextView
	        android:id="@+id/currentLocation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/locationFormat"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="25dp" />

        <ImageView
            android:id="@+id/currentImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/currentLocation"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/currentCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/currentImage"
            android:layout_below="@+id/currentImage"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignTop="@id/currentImage"
            android:layout_centerHorizontal="true"
            android:text="@string/currentTempFormat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/currentWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/currentTemp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/currentTemp"
            android:text="@string/windFormat"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/currentHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/currentWind"
            android:layout_below="@+id/currentWind"
            android:text="@string/humidityFormat"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <ListView
        android:id="@+id/forecastList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>